--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,1 +1,4 @@
-<app-comment [comment]="comment"></app-comment>
+<div class="content">
+  <div class="header">Welcome to Angular bootcamp</div>
+  <app-comments></app-comments>
+</div>
