--- a/ui/src/app/components/comment/comment.component.css
+++ b/ui/src/app/components/comment/comment.component.css
@@ -2,6 +2,7 @@
   padding: 20px 25px;
 }
 
+/* this demonstrates component CSS scope (see app.component.css) */
 .header {
   display: flex;
   justify-content: space-between;
