--- a/ui/src/app/app.component.css
+++ b/ui/src/app/app.component.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-/* this demonstrates component CSS scope (see comment.component.css) */
+/* this demonstrates component CSS scope (see message.component.css) */
 .header {
   margin: 30px 20px;
   font-size: 24px;
