feat(ui/message-form): create component for sending message

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="content">
   <div class="header">Welcome to Angular bootcamp</div>
   <app-messages></app-messages>
+  <app-message-form></app-message-form>
 </div>
 
 <h1>Messages</h1>
