--- a/ui/src/app/components/message/message.component.css
+++ b/ui/src/app/components/message/message.component.css
@@ -1,5 +1,16 @@
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 .message {
   padding: 20px 25px;
+  animation: fade-in 1s ease-in;
 }
 
 /* this demonstrates component CSS scope (see app.component.css) */
