--- a/ui/src/app/components/message-form/message-form.component.css
+++ b/ui/src/app/components/message-form/message-form.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 30px;
-  background-color: rgba(15, 12, 139, 0.8);
+  background-color: #133c64;
   color: #ffffff;
 }
 
@@ -36,21 +36,27 @@
   font-size: 18px;
 }
 
+.big-input::placeholder {
+  color: #d0cdd7;
+}
+
 .submit-button {
   margin-top: 20px;
   padding: 10px 15px;
   border: none;
   border-radius: 5px;
-  background-color: #b9b9b9;
-  color: #000000;
+  background-color: #229135;
+  color: #ffffff;
   cursor: pointer;
+  transition: background-color 0.5s, color 0.5s;
 }
 
 .submit-button:disabled {
   cursor: not-allowed;
-  color: #ff0c19;
+  background-color: #bd372c;
+  color: #fe9189;
 }
 
 .submit-button:hover:not(:disabled) {
-  opacity: 0.9;
+  background-color: #0f7521;
 }
