--- a/ui/src/app/components/message-form/message-form.component.html
+++ b/ui/src/app/components/message-form/message-form.component.html
@@ -21,6 +21,11 @@
       ></div>
     </div>
   </div>
-  <input class="big-input" formControlName="text" required />
+  <input
+    class="big-input"
+    formControlName="text"
+    placeholder="Write a message ..."
+    required
+  />
   <button class="submit-button" [disabled]="!form.valid">Submit</button>
 </form>
