--- a/ui/src/app/components/message/message.component.html
+++ b/ui/src/app/components/message/message.component.html
@@ -3,13 +3,9 @@
     <div class="author" [style.color]="message.author.color">
       {{ message.author.name }}
     </div>
-    <div class="time">{{ message.timestamp | date: 'HH:mm:ss' }}</div>
+    <div class="time">{{ message.timestamp }}</div>
   </div>
   <div class="text-wrapper">
-    <div class="text">{{ message.text | emoji }}</div>
-    <div class="likes">
-      <i class="material-icons like-icon" (click)="onClick()">thumb_up</i>
-      <span class="likes-count">{{ message.likes || 0 }}</span>
-    </div>
+    <div class="text">{{ message.text }}</div>
   </div>
 </div>
